examples/test/testpolicy10653.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10653
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key11: value22
      key34: value20
      key37: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value39
          key11: value0
          key38: value22
